--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,10 +16,10 @@
                 android:layout_marginEnd="100dp"
                 android:id="@+id/linearLayout1"
         >
-            <TextView
+            <EditText
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Team A"
+                    android:hint="Team A"
                     android:layout_gravity="center"
                     android:id="@+id/first_team"
                     android:layout_marginBottom="16dp"
@@ -29,24 +29,28 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="1 point"
+                    android:id="@+id/one_point"
                     android:layout_gravity="center"
             />
             <Button
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="2 point"
+                    android:id="@+id/two_points"
                     android:layout_gravity="center"
             />
             <Button
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="3 point"
+                    android:id="@+id/three_point"
                     android:layout_gravity="center"
             />
             <TextView android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
-                      android:text="points"
-                      android:textSize="30sp"
+                      android:text="0 point"
+                      android:id="@+id/point_a"
+                      android:textSize="50sp"
                       android:layout_marginTop="60dp"
                       android:padding="8dp"
                       android:layout_gravity="center"
@@ -64,10 +68,10 @@
             android:layout_marginTop="24dp"
             android:layout_toEndOf="@id/center"
             android:layout_marginStart="100dp">
-        <TextView
+        <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Team B"
+                android:hint="Team B"
                 android:id="@+id/second_team"
                 android:layout_marginBottom="16dp"
                 android:textSize="30sp"
@@ -77,27 +81,31 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="1 point"
+                android:onClick="handleFirstPoint"
                 android:layout_gravity="center"
         />
         <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="2 point"
+                android:onClick="handleSecondPoint"
                 android:layout_gravity="center"
         />
         <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="3 point"
+                android:onClick="handleThirdPoint"
                 android:layout_gravity="center"
         />
         <TextView android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
-                  android:text="points"
+                  android:text="0"
                   android:layout_gravity="center"
-                  android:textSize="30sp"
+                  android:textSize="50sp"
                   android:layout_marginTop="60dp"
                   android:padding="8dp"
+                  android:id="@+id/point_b"
         />
     </LinearLayout>
 
