--- a/app/src/main/res/layout/activity_basketball.xml
+++ b/app/src/main/res/layout/activity_basketball.xml
@@ -5,19 +5,19 @@
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:context=".MainActivity"
+            tools:context=".BasketBallActivity"
             >
         <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:layout_marginTop="24dp"
                 android:layout_toStartOf="@+id/center"
-                android:layout_marginEnd="100dp"
+
                 android:id="@+id/linearLayout1"
         >
             <EditText
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Team A"
                     android:layout_gravity="center"
@@ -50,8 +50,8 @@
                       android:layout_height="wrap_content"
                       android:text="0 point"
                       android:id="@+id/point_a"
-                      android:textSize="50sp"
-                      android:layout_marginTop="60dp"
+                      android:textSize="40sp"
+                      android:layout_marginTop="30dp"
                       android:padding="8dp"
                       android:layout_gravity="center"
             />
@@ -62,14 +62,14 @@
               android:id="@+id/center"
               android:background="@color/colorAccent"/>
     <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_marginTop="24dp"
             android:layout_toEndOf="@id/center"
-            android:layout_marginStart="100dp">
+    >
         <EditText
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Team B"
                 android:id="@+id/second_team"
@@ -100,10 +100,10 @@
         />
         <TextView android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
-                  android:text="0"
+                  android:text="0 points"
                   android:layout_gravity="center"
-                  android:textSize="50sp"
-                  android:layout_marginTop="60dp"
+                  android:textSize="40sp"
+                  android:layout_marginTop="24dp"
                   android:padding="8dp"
                   android:id="@+id/point_b"
         />
