--- a/app/src/main/res/layout/activity_lanucher.xml
+++ b/app/src/main/res/layout/activity_lanucher.xml
@@ -23,4 +23,13 @@
     android:layout_marginRight="20dp"
     android:id="@+id/basketBallButton"/>
 
+    <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="scrolling_activity"
+            android:layout_marginTop="30dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:id="@+id/scrolling_activity_buttton"/>
+
 </LinearLayout>
